[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/GameOverScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/SettingsScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/HomeScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Screens.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/menu_click.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/Victor Herbert Orchestra - 1911 - Naughty Marietta.ogg" type="AudioStream" id=6]
[ext_resource path="res://UI/AboutScreen.tscn" type="PackedScene" id=7]

[node name="Screens" type="Node"]
script = ExtResource( 4 )

[node name="HomeScreen" parent="." instance=ExtResource( 3 )]

[node name="GameOverScreen" parent="." instance=ExtResource( 1 )]

[node name="SettingsScreen" parent="." instance=ExtResource( 2 )]

[node name="AboutScreen" parent="." instance=ExtResource( 7 )]

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -22.214
